# Stock-Analyst-Agent

./: .gitignore  README.md  crew.py  llm.py  main.py  pyproject.toml
agents/: financial_analyst.py  intent_parser.py  investment_advisor.py  risk_analyst.py
tasks/: stock.py
tools/: stock_scorer.py  ticker_search.py  yahoo_finance.py
